Fix string overflowing issue and truncate description

--- a/app/assets/stylesheets/_treasures.scss
+++ b/app/assets/stylesheets/_treasures.scss
@@ -92,6 +92,7 @@
 
 		.description {
 			font-size: 1rem;
+			width: 90%;
 		}
 
 		.heart-count {
